--- a/HTML/portfolio1.html
+++ b/HTML/portfolio1.html
@@ -6,47 +6,51 @@
     <title>Resume</title>
 </head>
 <body>
-    <h1 align="center">Resume</h1>
+     <h1 align="center">Resume</h1>
     <p style="padding: 20px; font-size: 175%;" > 
-        <img src = "image1.jpg" align = "right" alt = "My Photo" width = "200" height = "250">
+        <img src = "myphoto.jpg" align = "right" alt = "My Photo" width = "200" height = "250"></p>
         <br>
-        Name : Abc Ahlawat 
+        Name : Avnish Ahlawat 
         <br>
-        Father's Name : Mr. Xyz Singh
+        Father's Name : Mr. Satendra Singh
         <br>
-        Mother's Name : Mrs. Pqr Devi
+        Mother's Name : Mrs. Rama
         <br>
-        Email : abc.ahlawat13@gmail.com
+        Email : avnishahlawat13@gmail.com
         <br>
         Phone : +919876543210
         <br>
-        DOB : 27/08/2007
+        DOB : 10/08/2005
     </p>
+
+     GitHub : <a href="https://github.com/avnishahlawat" target="_blank">github.com/avnishahlawat</a>
+    <br>
+    LinkedIn : <a href="https://www.linkedin.com/in/avnish-ahlawat-31b64836a/" target="_blank">linkedin.com/in/your-profile</a>
 
     <h1 align="center">Academic Qualifications</h1>
     <table border ="2" width="85%" cellpadding="10" align ="center">
         <tr>
-            <th align="center" bgcolor="red">S No</th>
-            <th align="center" bgcolor="red">Class</th>
-            <th align="center" bgcolor="red">Board</th>
-            <th align="center" bgcolor="red">Marks</th>
-            <th align="center" bgcolor="red">Division</th>
+            <th align="center" bgcolor="green">S No</th>
+            <th align="center" bgcolor="green">Class</th>
+            <th align="center" bgcolor="green">Board</th>
+            <th align="center" bgcolor="green">Marks</th>
+            <th align="center" bgcolor="green">Division</th>
         </tr>
-        <tr bgcolor="purple"   >
+        <tr bgcolor="yellow">
             <td>1</td>
             <td>10th</td>
             <td>CBSE</td>
             <td>92%</td>
             <td>First</td>
         </tr>
-        <tr bgcolor="blue">
+        <tr bgcolor="grey">
             <td>2</td>
             <td>12th</td>
             <td>CBSE</td>
             <td>83%</td>
             <td>First</td>
         </tr>
-        <tr bgcolor="grey">
+        <tr bgcolor="red">
             <td>3</td>
             <td>Graduation</td>
             <td>AKTU</td>
