Customisation of portfolio

--- a/HTML/portfolio1.html
+++ b/HTML/portfolio1.html
@@ -6,9 +6,9 @@
     <title>Resume</title>
 </head>
 <body>
-     <h1 align="center">Resume</h1>
-    <p style="padding: 20px; font-size: 175%;" > 
-        <img src = "myphoto.jpg" align = "right" alt = "My Photo" width = "200" height = "250"></p>
+     <marquee><h1 align="center">RESUME</h1></marquee>
+    <p style="padding: 20px; font-size: 200%;" > 
+        <img src = "myphoto.jpg" align = "right" alt = "My Photo" width = "150" height = "180"></p>
         <br>
         Name : Avnish Ahlawat 
         <br>
@@ -20,7 +20,7 @@
         <br>
         Phone : +919876543210
         <br>
-        DOB : 10/08/2005
+        DOB : 10/08/2006
     </p>
 
      GitHub : <a href="https://github.com/avnishahlawat" target="_blank">github.com/avnishahlawat</a>
